# h3-py

./: .gitignore  CMakeLists.txt  MANIFEST.in  _changelog.html  api_comparison.html  api_quick.html  api_verbose.html  contributing.html  genindex.html  intro.html  polygon_tutorial.html  project_links.html  py-modindex.html  pyproject.toml  search.html  setup.py
.github/workflows/: wheels.yml
_modules/: index.html
_modules/h3/: _h3shape.html
_modules/h3/api/: basic_str.html
src/h3/_cy/: CMakeLists.txt  __init__.py  util.pxd  util.pyx  vectorized.pyx
src/h3/api/: __init__.py
src/h3/api/basic_int/: __init__.py
src/h3/api/experimental_vectorized_int/: _convert.py
src/h3/api/experimental_vectorized_str/: _convert.py
